Fixing makefile and headers

--- a/Assignment3/Makefile
+++ b/Assignment3/Makefile
@@ -1,18 +1,30 @@
-PROJECT = Hierarchy
 CXX = g++
-CXXFLAGS = -Wall -Wextra -pedantic
-SRC = main.cpp Autobot.cpp Decepticon.cpp Driveable.cpp Gun.cpp Pilot.cpp Transformer.cpp
-OBJ = $(SRC:.cpp=.o)
+CXXFLAGS = -std=c++17 -Wall -I. -fPIC
+ARFLAGS = rcs
+LIBS = -lgtest -lgtest_main -lpthread
 
-all: $(PROJECT)
+PROJECT = hierarchy
+LIBPROJECT = lib$(PROJECT).a
+TESTPROJECT = test-$(PROJECT)
 
-$(PROJECT): $(OBJ)
-        $(CXX) -o $@ $^
+SRCS = Transformer.cpp Autobot.cpp Decepticon.cpp Driveable.cpp Gun.cpp Pilot.cpp
+TEST_SRCS = $(SRCS:.cpp=_test.cpp)
 
-%.o: %.cpp
-        $(CXX) -c $< -o $@ $(CXXFLAGS)
+OBJS = $(SRCS:.cpp=.o)
+TEST_OBJS = $(TEST_SRCS:.cpp=.o)
+
+all: $(TESTPROJECT)
+
+$(LIBPROJECT): $(OBJS)
+	$(AR) $(ARFLAGS) $@ $^
+
+$(TESTPROJECT): $(TEST_OBJS) $(LIBPROJECT)
+	$(CXX) -o $@ $^ $(CXXFLAGS) -L. -l:$(LIBPROJECT) $(LIBS)
+
+test: $(TESTPROJECT)
+	./$(TESTPROJECT)
 
 clean:
-        rm -f $(OBJ) $(PROJECT)
+	rm -f *.o $(PROJECT) $(TESTPROJECT) $(LIBPROJECT)
 
-.PHONY: all clean
+.PHONY: all clean test
